@@ -212,7 +212,7 @@ QMimeData *DirViewModel::mimeData(const QModelIndexList &indexes) const
         foreach (const QString &f, files) {
             paths << Settings::self()->mpdDir()+f;
         }
-        PlayQueueModel::encode(*mimeData, QLatin1String("text/uri-list"), paths);
+        PlayQueueModel::encode(*mimeData, PlayQueueModel::constUriMimeType, paths);
     }
     return mimeData;
 }
